--- a/package.json
+++ b/package.json
@@ -12,14 +12,54 @@
   },
   "license": "MIT",
   "author": "Ethan Schmidt <ebs.euler@gmail.com> (https://cs-schmidt.dev/)",
+  "module": true,
   "scripts": {
+    "build": "cross-env NODE_ENV=production webpack build --config webpack.base.cjs --progress && firebase emulators:start",
+    "build:deploy": "cross-env NODE_ENV=deployment webpack build --config webpack.base.cjs --progress && firebase deploy",
+    "build:report": "webpack-bundle-analyzer --port='auto' ./public/reports/bundles.json",
+    "dev": "cross-env NODE_ENV=development webpack serve --config webpack.base.cjs",
     "prepare": "husky install"
   },
+  "dependencies": {
+    "bootstrap": "^5.3.2",
+    "firebase": "^10.4.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.23.0",
+    "@babel/plugin-transform-runtime": "^7.22.15",
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
+    "@babel/preset-typescript": "^7.23.0",
+    "@babel/runtime": "^7.23.1",
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "babel-loader": "^9.1.3",
+    "compression-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "core-js": "^3.33.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
+    "cssnano": "^6.0.1",
+    "dotenv-webpack": "^8.0.1",
+    "firebase-tools": "^12.6.2",
+    "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
-    "sort-package-json": "^2.6.0"
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^9.1.4",
+    "react-refresh": "^0.14.0",
+    "sort-package-json": "^2.6.0",
+    "webpack": "^5.88.2",
+    "webpack-bundle-analyzer": "^4.9.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   }
 }
