ci: automate codebase linting and formatting

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "build:deploy": "cross-env NODE_ENV=deployment webpack build --config webpack.base.cjs --progress && firebase deploy",
     "build:report": "webpack-bundle-analyzer --port='auto' ./public/reports/bundles.json",
     "dev": "cross-env NODE_ENV=development webpack serve --config webpack.base.cjs",
+    "format": "sort-package-json './package.json' && prettier --ignore-unknown --write .",
+    "lint": "eslint --ignore-path .gitignore --fix **/*.{js,mjs,cjs,jsx,ts,mts,cts,tsx}",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -37,6 +39,10 @@
     "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.11",
+    "@types/react": "^18.2.25",
+    "@types/react-dom": "^18.2.10",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "babel-loader": "^9.1.3",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -45,6 +51,16 @@
     "css-loader": "^6.8.1",
     "cssnano": "^6.0.1",
     "dotenv-webpack": "^8.0.1",
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-import-resolver-webpack": "^0.13.7",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "firebase-tools": "^12.6.2",
     "html-webpack-plugin": "^5.5.3",
     "husky": "^8.0.3",
@@ -54,8 +70,10 @@
     "postcss-loader": "^7.3.3",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^9.1.4",
+    "prettier": "^3.0.3",
     "react-refresh": "^0.14.0",
     "sort-package-json": "^2.6.0",
+    "typescript": "^5.2.2",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
